# real-time-speech-enhancement-beamforming-engine

./: .gitignore  README.md  inference.py  model.onnx.data  requirements.txt
beamforming/: mvdr.py
configs/: crn_base.yaml  crn_small.yaml
cpp_inference/: CMakeLists.txt
cpp_inference/include/: speech_enhancer.h  wav_io.h
cpp_inference/src/: speech_enhancer.cpp
data/: dataset.py  fast_dataset.py  precompute_dataset.py  prepare_dataset.py  simulate_rir.py
docs/: index.html
evaluation/: evaluate.py  metrics.py  results.json
export/: export_onnx.py
matlab/: convert_rirs_to_mat.m  eval_rt60_robustness.m
models/: __init__.py  crn.py
tests/: test_pipeline.py
training/: losses.py  train.py
utils/: audio.py
